add dark mode and light mode

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
       <div class="title-wrap">
         <div class="title">มาเป็นเพื่อนกันใน LINE Official Account</div>
         <div class="subtitle">เพื่อรับทราบข่าวสารล่าสุดเกี่ยวกับศิริชัยเภสัช</div>
+        <div class="theme-toggle">
+          <span class="theme-label" id="themeLabel">โหมดสว่าง</span>
+          <button
+            class="theme-switch"
+            id="themeToggle"
+            type="button"
+            role="switch"
+            aria-checked="false"
+            aria-label="สลับโหมดสว่าง/มืด">
+            <span class="theme-switch__thumb" aria-hidden="true"></span>
+          </button>
+        </div>
       </div>
 
       <div class="spacer"></div>
